telah mengerjakan t03
"course-add#12S2203#Object-oriented Programming#3#C
course-add#10S1002#Pemrograman Prosedural#2#D
student-add#12S20999#Wiro Sableng#2020#Information Systems
enrollment-add#12S2203#12S20999#2021/2022#even
student-add#12S20111#Jaka Sembung#2019#Information Systems
enrollment-add#12S2203#12S20111#2020/2021#even
---
",


course-add#12S2203#Object-oriented Programming#3#C
course-add#10S1002#Pemrograman Prosedural#2#D
student-add#12S20999#Wiro Sableng#2020#Information Systems
enrollment-add#12S2203#12S20999#2021/2022#even
student-add#12S20111#Jaka Sembung#2019#Information Systems
enrollment-add#12S2203#12S20111#2020/2021#even
---

10S1002|Pemrograman Prosedural|2|D
12S2203|Object-oriented Programming|3|C
12S20999|Wiro Sableng|2020|Information Systems
12S20111|Jaka Sembung|2019|Information Systems
12S2203|12S20999|2021/2022|even|None
12S2203|12S20111|2020/2021|even|None
",

telah memperbaiki driver2
sudah capek pak